<resources>
    <string name="app_name">MovieApp</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_discover">Discover</string>
    <string name="lbl_best_popular_films_and_serials">BEST POPULAR FILMS AND SERIALS</string>
    <string name="lbl_see_more"><u>See More</u></string>
    <string name="lbl_check_movie_show_time">Check Movie \nShow Time</string>
    <string name="lbl_more_showcases"><u>MORE SHOWCASES</u></string>
    <string name="lbl_showcases">SHOWCASES</string>
    <string name="lbl_best_actor">BEST ACTORS</string>
    <string name="lbl_more_actors"><u>MORE ACTORS</u></string>
    <string name="lbl_story_line">Story Line</string>
    <string name="lbl_rare_movie">RARE MOVIE</string>
    <string name="lbl_play_trailer">PLAY TRAILER</string>
    <string name="lbl_actors">ACTORS</string>
    <string name="lbl_creators">CREATORS</string>
    <string name="lbl_more_creator"><u>MORE CREATORS</u></string>
    <string name="lbl_original_title">Original Title :</string>
    <string name="lbl_type">Type :</string>
    <string name="lbl_production">Production :</string>
    <string name="lbl_premiere">Premiere :</string>
    <string name="lbl_description">Description :</string>
    <string name="lbl_about_film">About Film</string>
    <string name="lbl_welcome">WELCOME</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="please_enter_movie_name">Please enter movie name</string>
</resources>